kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: securebank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: securebank

  template:

    metadata:
      labels:
        app: securebank

    spec:

      containers:

      - name: securebank

        image: ratanahire/securebank:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 8080
