kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: securebank-service

spec:

  selector:
    app: securebank

  type: NodePort

  ports:

  - port: 8080

    targetPort: 8080

    nodePort: 30080
