kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: securebank-ingress

spec:

  rules:

  - host: securebank.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: securebank-service

            port:

              number: 8080
